# xhandler-rust

xhandler-python/xbuilder/: MANIFEST.in  README.md  pyproject.toml
xhandler-python/xbuilder/src/xbuilder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xhandler-python/xbuilder/src/xbuilder/domain/entities/: common.py
xhandler-python/xbuilder/src/xbuilder/domain/services/: enricher.py
xhandler-python/xbuilder/src/xbuilder/infrastructure/implementation/: xml_renderer.py
xhandler-python/xbuilder/src/xbuilder/infrastructure/templates/renderer/: creditNote.xml  perception.xml  summaryDocuments.xml  voidedDocuments.xml
xhandler-python/xbuilder/src/xbuilder/infrastructure/templates/ubl/standard/guia/: despatch-advice.ftl
xhandler-python/xbuilder/src/xbuilder/infrastructure/templates/ubl/standard/include/: address.xml  contact.xml  documentos-relacionados.xml  monetary-total.xml  namespaces.xml  tax-total.xml
xhandler-python/xbuilder/src/xbuilder/infrastructure/templates/ubl/standard/include/note/: invoice-reference.xml
xhandler-python/xbuilder/src/xbuilder/infrastructure/templates/ubl/sunat/include/: agent-party.xml  supplier.xml
xhandler-python/xbuilder/tests/: test_enricher.py
xhandler-python/xhandler/: README.md  pyproject.toml
xhandler-python/xhandler/examples/: README.md  invoice_example.py  private.key
xhandler-python/xhandler/src/xhandler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xhandler-python/xhandler/src/xhandler/application/use_cases/: handler.py
xhandler-python/xhandler/tests/: test_handler.py
xhandler-python/xsender/: README.md  pyproject.toml
xhandler-python/xsender/src/xsender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xhandler-python/xsender/src/xsender/domain/entities/: models.py
xhandler-python/xsender/tests/: test_sunat_client.py
xhandler-python/xsigner/: README.md  pyproject.toml
xhandler-python/xsigner/src/xsigner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
xhandler-python/xsigner/tests/: private.key  public.crt  sample.xml  test_signer.py
xhanlder-rust/: .clippy.toml  .dockerignore  .gitignore  Cargo.toml  Dockerfile.server  Dockerfile.ui  README.md  entrypoint.ui.sh  openapi.yaml  rust-toolchain.toml
xhanlder-rust/xbuilder/: Cargo.toml  README.md
xhanlder-rust/xbuilder/src/: catalogs.rs  lib.rs  prelude.rs
xhanlder-rust/xbuilder/tests/: credit_note.rs  credit_note_isc.rs  credit_note_orden_de_compra.rs  debit_note.rs  invoice.rs  invoice_anticipos.rs  invoice_descuentos.rs  invoice_detraccion.rs  invoice_direccion_entrega.rs  invoice_documento_relacionado.rs  invoice_fecha_vencimiento.rs  invoice_forma_pago.rs  invoice_guias.rs  invoice_igv_tipo.rs  invoice_isc.rs  invoice_issue30.rs  invoice_moneda.rs  invoice_orden_compra.rs  invoice_percepcion.rs
xhanlder-rust/xhandler/: Cargo.toml
xhanlder-rust/xhandler/src/: lib.rs  prelude.rs
xhanlder-rust/xsender/: Cargo.toml  README.md  build.rs
xhanlder-rust/xsigner/: Cargo.toml  README.md
(+393 files in other folders)
