[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xbuilder"
version = "0.1.0"
description = "A Python library to build UBL XML files for Peruvian standards."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "jinja2",
]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.black]
line-length = 88
target-version = ['py38']

[tool.setuptools]
include-package-data = true

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
]
