[project]
name = "xhandler"
version = "0.1.0"
description = "A Python library that orchestrates the xbuilder, xsigner, and xsender modules."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "xbuilder @ file:///opt/backup/lab/dooservice/xhandler-python/xbuilder",
    "xsigner @ file:///opt/backup/lab/dooservice/xhandler-python/xsigner",
    "xsender @ file:///opt/backup/lab/dooservice/xhandler-python/xsender",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "pytest-mock"
]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.black]
line-length = 88
target-version = ['py38']
