[project]
name = "xsender"
version = "0.1.0"
description = "A Python library to send UBL XML files to SUNAT."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "requests",
    "zeep",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "pytest-mock"
]

[tool.mypy]
mypy_path = "src"
strict = true

[tool.black]
line-length = 88
target-version = ['py38']
